--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "Azure Data Engineer | 4+ Years Experience"
 baseurl: "" 
 url: "https://nandinirana23.github.io/nandinirathore.github.io/"
 
-remote_theme: "pages-themes/minimal@v0.2.0"
+remote_theme: "pages-themes/modernlist@v0.2.0"
 plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
